improved annotations type in education page

--- a/education.html
+++ b/education.html
@@ -104,7 +104,7 @@
 						<div class="details">
 							<div class="title">
 								<span class="title"><a href="https://www.coursera.org/course/datavisualization" target="_blank">Data Visualization</a></span>
-								<span class="degree">online class</span>
+								<span class="annotation degree">online class</span>
 							</div>
 							<div class="description">
 								Intense class that teaches the basics of data visualization, from human perception, representing quantitative, hierarchical and relationship data to visualizing large amounts of data of any kind.
@@ -122,7 +122,7 @@
 						<div class="details">
 							<div class="title">
 								<span class="title">Users, Experience and Beyond</span>
-								<span class="degree">workshop</span>
+								<span class="annotation degree">workshop</span>
 							</div>
 							<div class="description">One day workshop where I learned to put something as abstract as "user experience" into more practical, quantifiable, hands-on terms by using some simple and interesting tools.
 							</div>
@@ -138,7 +138,7 @@
 						<div class="details">
 							<div class="title">
 								<span class="title"><a href="https://www.udacity.com/course/ud849" target="_blank">UX Design for Mobile Developers</a></span>
-								<span class="degree">online class</span>
+								<span class="annotation degree">online class</span>
 							</div>
 							<div class="description">Entry level course that teaches about the design constraints of a mobile platform with emphasis on Android and it's particularities. 
 							It is a nice introduction for someone starting to design and develop mobile apps.</div>
@@ -154,7 +154,7 @@
 						<div class="details">
 							<div class="title">
 								<span class="title"><a href="https://www.coursera.org/course/hciucsd" target="_blank">Human-Computer Interaction</a></span>
-								<span class="degree">online class</span>
+								<span class="annotation degree">online class</span>
 							</div>
 							<div class="description">Intense class that teaches a human centered design metodology. Besides watching the lessons, I also had to do a lot of practice, going through each step of the process in order to deliver a functional dynamic prototype. 
 							I had to do user observations and interviews, storyboards, multiple versions of wireframes, heuristic evaluation, user testing, dynamic hi-fi prototypes and to review and grade the assignments of my peers.<br>
@@ -172,7 +172,7 @@
 						<div class="details">
 							<div class="title">
 								<span class="title"><a href="http://www.didi.com/docs/StepsTowardCognitiveEngineering_2011d.pdf" target="_blank">Steps toward a Discipline of Cognitive Engineering</a></span>
-								<span class="degree">seminar</span>
+								<span class="annotation degree">seminar</span>
 							</div>
 							<div class="description">It was during this class that I realized how much I enjoy designing solutions for human problems. Brad taught us the basics of a human-centered design methodology and more than that, 
 							he showed us some of his work with a passion that was contagious. After the seminar, the company hired him to redesign one of the products and I was part of the team that went to New York for a week to discuss the implementation of his ideas.</div>
@@ -188,7 +188,7 @@
 						<div class="details">
 							<div class="title">
 								<span class="title">Artificial Intelligence and Vision</span>
-								<span class="degree">Master of Science</span>
+								<span class="annotation degree">Master of Science</span>
 							</div>
 							<div class="description">I studied in greater depth disciplines like Natural Language Processing, Image Processing, Machine Learning, Data Mining and User Interface Design. 
 							For my dissertation project I designed and tested an Intelligent Financial Information Retrieval system.</div>
@@ -204,7 +204,7 @@
 						<div class="details">
 							<div class="title">
 								<span class="title">Computer Science</span>
-								<span class="degree">Bachelor of Science</span>
+								<span class="annotation degree">Bachelor of Science</span>
 							</div>
 							<div class="description">Learned a broad range of topics from mathematics, computer programming, artificial intelligence to networks and computer architecture. 
 							For my graduation project I developed an algorithm to recognize cars from traffic scenes.</div>
@@ -219,47 +219,47 @@
 				<div id="books">
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.com/Laws-Simplicity-Design-Technology-Business/dp/0262134721/ref=sr_1_1?s=books&ie=UTF8&qid=1413363276&sr=1-1&keywords=the+laws+of+simplicity" target="_blank">The Laws of Simplicity</a></span>
-						<span class="author">John Maeda</span>
+						<span class="annotation author">John Maeda</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.com/Design-Everyday-Things-Revised-Expanded/dp/0465050654/ref=sr_1_1?s=books&ie=UTF8&qid=1433272798&sr=1-1&keywords=the+design+of+everyday+things" target="_blank">The Design of Everyday Things</a></span>
-						<span class="author">Don Norman</span>
+						<span class="annotation author">Don Norman</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.com/Things-That-Make-Smart-Attributes/dp/0201626950/ref=sr_1_1?s=books&ie=UTF8&qid=1413363434&sr=1-1&keywords=Things+That+Make+us+Smart" target="_blank">Things That Make us Smart</a></span>
-						<span class="author">Don Norman</span>
+						<span class="annotation author">Don Norman</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.com/Visual-Complexity-Mapping-Patterns-Information/dp/1616892196/ref=sr_1_1?s=books&ie=UTF8&qid=1413363540&sr=1-1&keywords=Visual+Complexity" target="_blank">Visual Complexity: Mapping Patterns of Information</a></span>						
-						<span class="author">Manuel Lima</span>
+						<span class="annotation author">Manuel Lima</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.com/Visual-Display-Quantitative-Information/dp/0961392142/ref=sr_1_1?s=books&ie=UTF8&qid=1413363650&sr=1-1&keywords=Visual+Display+of+Quantitative+Information" target="_blank">The Visual Display of Quantitative Information</a></span>						
-						<span class="author">Edward Tufte</span>
+						<span class="annotation author">Edward Tufte</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.com/Search-User-Interfaces-Marti-Hearst-ebook/dp/B00AKE1W6W/ref=sr_1_1?ie=UTF8&qid=1420294588&sr=8-1&keywords=marti+hearst" target="_blank">Search User Interfaces</a></span>
-						<span class="author">Marti Hearst</span>
+						<span class="annotation author">Marti Hearst</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.com/Things-Designer-People-Voices-Matter/dp/0321767535/ref=sr_1_1?s=books&ie=UTF8&qid=1413363744&sr=1-1&keywords=100+things+every+designer+should+know+about+people" target="_blank">100 Things Every Designer Should Know about People</a></span>						
-						<span class="author">Susan W.</span>
+						<span class="annotation author">Susan W.</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.com/Elements-Typographic-Style-Version-Anniversary/dp/0881792128/ref=sr_1_1?s=books&ie=UTF8&qid=1413363856&sr=1-1&keywords=the+elements+of+typographic+style" target="_blank">The Elements of Typographic Style</a></span>						
-						<span class="author">Robert Bringhurst</span>
+						<span class="annotation author">Robert Bringhurst</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.co.uk/Sketching-User-Experiences-Bill-Buxton/dp/0123819598/ref=sr_1_2?s=books&ie=UTF8&qid=1420294766&sr=1-2&keywords=sketching+user+experiences" target="_blank">Sketching User Experiences</a></span>
-						<span class="author">Bill Buxton</span>
+						<span class="annotation author">Bill Buxton</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.co.uk/Guide-marabout-dessin-Premont-Marie/dp/2501002806/ref=sr_1_1?s=books&ie=UTF8&qid=1420294187&sr=1-1&keywords=rose+marie+de+premont" target="_blank">Practical Drawing Guide</a></span>
-						<span class="author">Rose-Marie de Premont</span>
+						<span class="annotation author">Rose-Marie de Premont</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.co.uk/Handbook-Usability-Testing-Conduct-Effective/dp/0470185481/ref=sr_1_1?s=books&ie=UTF8&qid=1420294892&sr=1-1&keywords=handbook+of+usability+testing" target="_blank">Handbook of Usability Testing</a></span>
-						<span class="author">Dana Chisnell, Jeffrey Rubin</span>
+						<span class="annotation author">Dana Chisnell, Jeffrey Rubin</span>
 					</div>
 				</div>
 			</div>
