--- a/top_menu.html
+++ b/top_menu.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<span id="hamburger_menu"><img src="img/hamburger-black.png"/></span>
+<span id="hamburger_menu"><img src="img/ic_menu_white_24px.svg"/></span>
 <span id="mobile_title">
     <span class="name">Ovidiu Berdila</span>
     <span class="title">UX Designer</span>
