changed profile photo

--- a/side_menu.html
+++ b/side_menu.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div id="photo_container">
-    <img id="profile_photo" src="img/profile_photo.png"/>
+    <img id="profile_photo" src="img/profile-photo-3.png"/>
 
     <div id="summary"><span id="name">Ovidiu Berdila</span><br><span id="statement">I like to design simple and elegant solutions for complex problems.</span>
     </div>
