added romania characters to the name

--- a/side_menu.html
+++ b/side_menu.html
@@ -7,7 +7,7 @@
 <div id="photo_container">
     <img id="profile_photo" src="img/profile-photo-3.png"/>
 
-    <div id="summary"><span id="name">Ovidiu Berdila</span><br><span id="statement">I like to design simple and elegant solutions for complex problems.</span>
+    <div id="summary"><span id="name">Ovidiu Berdil&#259;</span><br><span id="statement">I like to design simple and elegant solutions for complex problems.</span>
     </div>
 </div>
 <div id="menu">
