--- a/top_menu.html
+++ b/top_menu.html
@@ -7,7 +7,7 @@
 
 <span id="hamburger_menu"><img src="img/ic_menu_white_24px.svg"/></span>
 <span id="mobile_title">
-    <span class="name">Ovidiu Berdila</span>
+    <span class="name">Ovidiu Berdil&#259;</span>
     <span class="title">UX Designer</span>
 </span>
 
