updated education content

--- a/education.html
+++ b/education.html
@@ -86,14 +86,34 @@
 		<div id="right_panel">
 			<div id="introduction">
 				<p>I have spent the last ten years of my life developing an education around computer science. It was a childhood dream to become a computer programmer and I was fortunate to have the chance to study in a big city with lots of universities, like <a href="http://en.wikipedia.org/wiki/Cluj-Napoca" target="-blank">Cluj Napoca</a>.</p>
-				<p>After college and a few years of professional programming, I fell in love with User Interface design. It happened when I met <a href="http://www.didi.com/" target="_blank">Bradford Paley</a> at a seminar held on site by
-				the company I was working for at that time. Since then, I read anything I could put my hands on related to UI design and tried to build as many skills as I could to make the transition to professional designing.</p>
+				<p>After college and a few years of professional programming, I fell in love with User Centered Design. It happened when I met <a href="http://www.didi.com/" target="_blank">Bradford Paley</a> at a seminar held on site by
+				the company I was working for at that time. Since then, I read anything I could put my hands on related to UI and UX design and tried to build as many skills as I could to make the transition to professional designing.</p>
 				<p>My formal education in design consists mostly in seminars, online classes and a lot of interesting books that cover a large variety of topics, from human cognition and psychology, to color theory and typography.</p>
 			</div>
 
 			<div id="schools_panel">	
 				<h1>formal education</h1>
 				<div id="schools">
+
+					<div class="school">
+						<div class="circle"></div>
+						<div class="timeframe">
+							<div class="institution">Coursera</div>
+							<div class="time">July 2015 - Present</div>
+						</div>
+						<div class="details">
+							<div class="title">
+								<span class="title"><a href="https://www.coursera.org/specializations/interaction-design" target="_blank">Interaction Design Specialization</a></span>
+								<span class="annotation degree">online class</span>
+							</div>
+							<div class="description">
+								8-course specialization that teaches how to design technologies that bring people joy, rather than frustration.
+								</br>I learn how to generate design ideas, techniques for quickly prototyping them, and how to use prototypes to get feedback from other stakeholders like teammates, clients, and users.
+								</br>I also learn principles of visual design, perception, and cognition that inform effective interaction design.
+								</br>The specialization will conclude with a verifiable certificate from the
+								<a href="https://ucsd.edu/"  target="_blank">University of California, San Diego</a>.</div>
+						</div>
+					</div>
 
 					<div class="school">
 						<div class="circle"></div>
@@ -260,6 +280,10 @@
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.co.uk/Handbook-Usability-Testing-Conduct-Effective/dp/0470185481/ref=sr_1_1?s=books&ie=UTF8&qid=1420294892&sr=1-1&keywords=handbook+of+usability+testing" target="_blank">Handbook of Usability Testing</a></span>
 						<span class="annotation author">Dana Chisnell, Jeffrey Rubin</span>
+					</div>
+					<div class="book">
+						<span class="title"><a href ="http://www.amazon.com/Grid-Systems-Graphic-Design-Communication/dp/3721201450/ref=sr_1_1?s=books&ie=UTF8&qid=1462719780&sr=1-1&keywords=grid+systems" target="_blank">Grid Systems in Graphic Design</a></span>
+						<span class="annotation author">Josef Müller-Brockmann</span>
 					</div>
 				</div>
 			</div>
