--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="style/layout.css"/>
 		<link rel="stylesheet" href="style/index.css"/>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
+		<link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8"/>
@@ -57,9 +58,6 @@
 					Napoca</a> Romania and I am enjoying every bit of fun this beautiful city has to offer, except the
 					weather, that I sometimes hate, especially during the winters when it gets very cold, so cold that
 					the local flasher was once caught describing himself to women.
-				</div>
-				<div>Being involved for a while in the software development industry and seeing the lack of knowledge
-					and interest most of the companies show for the UX domain, really motivates me to make a change.
 				</div>
 				<div>I am surrounded by smart individuals with passion for technology and it is sometimes painful to
 					hear users complain about poor experiences with the products we develop.
