skeleton for 4 more projects added

--- a/projects.html
+++ b/projects.html
@@ -70,6 +70,83 @@
 
 			<div id="projects_list">
 
+				<div class="project">
+					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
+						<a  class="bottom"href="parking_plus.html">
+							<img src="img/parkingplus/thumbnail.png"/>
+						</a>
+						<div class="overlay">
+							<div class="overlay_inner">
+								<div class="topics">
+									<div class="topic">MOBILE</div>
+									<div class="topic">WIREFRAMES</div>
+									<div class="topic">ANIMATIONS</div>
+									<div class="topic">USER TESTING</div>
+									<div class="topic">STORYTELLING</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project_title">Parking Plus - Enjoy driving in your city again</div>
+				</div>
+
+				<div class="project">
+					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
+						<a  class="bottom"href="smart_access_box.html">
+							<img src="img/sab/thumbnail.png"/>
+						</a>
+						<div class="overlay">
+							<div class="overlay_inner">
+								<div class="topics">
+									<div class="topic">MOBILE</div>
+									<div class="topic">WIREFRAMES</div>
+									<div class="topic">VISUAL DESIGN</div>
+									<div class="topic">USER TESTING</div>
+									<div class="topic">STORYTELLING</div>
+									<div class="topic">BRANDING</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project_title">Smart Access Box</div>
+				</div>
+
+				<div class="project">
+					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
+						<a  class="bottom"href="multi_color_overlay.html">
+							<img src="img/network_overlay/thumbnail.png"/>
+						</a>
+						<div class="overlay">
+							<div class="overlay_inner">
+								<div class="topics">
+									<div class="topic">DATA VISUALISATION</div>
+									<div class="topic">CODE</div>
+									<div class="topic">VISUAL DESIGN</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project_title">Overlaying multivariate data on a biological network</div>
+				</div>
+
+				<div class="project">
+					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
+						<a  class="bottom"href="isoprofiler.html">
+							<img src="img/isoprofiler/thumbnail.png"/>
+						</a>
+						<div class="overlay">
+							<div class="overlay_inner">
+								<div class="topics">
+									<div class="topic">DATA VISUALISATION</div>
+									<div class="topic">CODE</div>
+									<div class="topic">VISUAL DESIGN</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project_title">Making sense of gene isoforms</div>
+				</div>
+
                 <div class="project">
                     <div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
                         <a  class="bottom"href="quesee.html">
