--- a/network_highlight.html
+++ b/network_highlight.html
@@ -169,6 +169,26 @@
                 <p>The changes were rolled out during multiple releases and this was a perfect way to deliver since networks
                     are the core part of the application and are used by the vast majority of the users.</p>
 
+				<div id="disqus_thread"></div>
+				<script>
+
+                    /**
+                     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+					/*
+					 var disqus_config = function () {
+					 this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+					 this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+					 };
+					 */
+                    (function() { // DON'T EDIT BELOW THIS LINE
+                        var d = document, s = d.createElement('script');
+                        s.src = '//ovidiu-berdila-ux.disqus.com/embed.js';
+                        s.setAttribute('data-timestamp', +new Date());
+                        (d.head || d.body).appendChild(s);
+                    })();
+				</script>
+
 			</div>
 		</div>
 	</body>
