updates education with latest specialization and created a stub for the capstone project

--- a/education.html
+++ b/education.html
@@ -111,7 +111,7 @@
 						<div class="circle"></div>
 						<div class="timeframe">
 							<div class="institution">Coursera</div>
-							<div class="time">July 2015 - Present</div>
+							<div class="time">July 2015 - Nov 2016</div>
 						</div>
 						<div class="details">
 							<div class="title">
@@ -120,9 +120,9 @@
 							</div>
 							<div class="description">
 								8-course specialization that teaches how to design technologies that bring people joy, rather than frustration.
-								</br>I learn how to generate design ideas, techniques for quickly prototyping them, and how to use prototypes to get feedback from other stakeholders like teammates, clients, and users.
-								</br>I also learn principles of visual design, perception, and cognition that inform effective interaction design.
-								</br>The specialization will conclude with a verifiable certificate from the
+								</br>I learned how to generate design ideas, techniques for quickly prototyping them, and how to use prototypes to get feedback from other stakeholders like teammates, clients, and users.
+								</br>I also learned principles of visual design, perception, and cognition that inform effective interaction design.
+								</br>The specialization concluded with a <a href="https://www.coursera.org/account/accomplishments/specialization/B3QGGNXQ3M9L" target="_blank">certificate</a> from the
 								<a href="https://ucsd.edu/"  target="_blank">University of California, San Diego</a>.</div>
 						</div>
 					</div>
@@ -140,7 +140,7 @@
 							</div>
 							<div class="description">
 								Intense class that teaches the basics of data visualization, from human perception, representing quantitative, hierarchical and relationship data to visualizing large amounts of data of any kind.
-								</br>This was a great learning experience that spread across four weeks and culminated by obtaining a <a href="https://www.coursera.org/account/accomplishments/records/LMzV7Z2w3pEb8RtQ" target="_blank">certificate</a> from the
+								</br>This was a great learning experience that spread across four weeks and culminated with a <a href="https://www.coursera.org/account/accomplishments/records/LMzV7Z2w3pEb8RtQ" target="_blank">certificate</a> from the
 								<a href="http://illinois.edu/about/index.html"  target="_blank">University of Illinois at Urbana-Champaign</a>.</div>
 						</div>
 					</div>
