--- a/projects.html
+++ b/projects.html
@@ -72,6 +72,26 @@
 
 				<div class="project">
 					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
+						<a  class="bottom"href="flexi_meetup.html">
+							<img src="img/fleximeetup/thumbnail.png"/>
+						</a>
+						<div class="overlay">
+							<div class="overlay_inner">
+								<div class="topics">
+									<div class="topic">MOBILE</div>
+									<div class="topic">WIREFRAMES</div>
+									<div class="topic">RESEARCH</div>
+									<div class="topic">USER TESTING</div>
+									<div class="topic">MATERIAL DESIgn</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project_title">FlexiMeetup - Interaction Design Specialization Capstone Project</div>
+				</div>
+
+				<div class="project">
+					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
 						<a  class="bottom"href="parking_plus.html">
 							<img src="img/parkingplus/thumbnail.png"/>
 						</a>
