started to add content to muti overlay article

--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -97,82 +97,81 @@
 		<div id="right_panel" class="project">
 
 			<div class="content">
-				<h1>MULTIVARIATE DATA OVERLAY ON A BIOLOGICAL NETWORK</h1>
+				<h1>MULTIVARIATE DATA OVERLAY ON CELL SIGNALING NETWORKS</h1>
 
-				<h2>THE NEED</h2>
+				<h2>THE CONTEXT</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>Talk about the progress of the project when I joined</p>
+				<p>Talk about the needs and challenges, why is this needed and why it tries to accomplish
+                - emphasize patterns (people don't know the patterns coming in)
+                    , overlay colors
 
-                <!--<div class="gallery">-->
-				    <!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-                <!--</div>-->
+                    analyze > emphasize(visualize) > publish
+
+                    maximum of 8 measurements, 20 observations
+                    start with a good default configuration and allow editing to make the tool less scary
+                    export table plus graph to publish in a paper
+
+                    find interesting connections between genes and pathways and activation, phosphorylation, putting it
+                    all together in this uber visualization, try to tell a story, try to explain the hypothesis in a visual way
+                </p>
+
+                <div class="gallery">
+				    <a class="fancybox" rel="group" title="Original mockup" href="img/network_overlay/1.original_proposal.png"><img class="gallery1" id="network_overlay_1" src="img/network_overlay/1.original_proposal.png" alt="" /></a>
+                </div>
 
 				<h2>IDEATION</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+                <p>hand drawn mockups</p>
+                <p>overlay ideation</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+
+				<div class="gallery">
+				<a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/2.ideation_collage.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/2.ideation_collage.png" alt="" /></a>
+				</div>
+
+                <p>ideation integration test bla bla bla bla sjdhfkjhs ksjdhf skdf jkhskjdfh jhf kdsajfhksdjf  kjshdfk sdkfj askhdf s</p>
+
+                <div class="gallery">
+				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/3.integration_test_bars.png"><img class="gallery4" id="network_overlay_3" src="img/network_overlay/3.integration_test_bars.png" alt="" /></a>
+				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/4.integration_test_sunburst.png"><img class="gallery4" id="network_overlay_4" src="img/network_overlay/4.integration_test_sunburst.png" alt="" /></a>
+				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/5.integration_test_worms.png"><img class="gallery4" id="network_overlay_5" src="img/network_overlay/5.integration_test_worms.png" alt="" /></a>
+				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/6.integration_test_worms_simplified.png"><img class="gallery4" id="network_overlay_6" src="img/network_overlay/6.integration_test_worms_simplified.png" alt="" /></a>
+				</div>
+
+                <p>exports</p>
 
 				<h2>MOVING AWAY FROM THE NETWORK</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>help online and multiple talks we decided to move away from the overlay</p>
+				<p>mockups with side panels and tables</p>
+				<p>filters need </p>
+				<p>filters mockups </p>
 
 				<!--<div class="gallery">-->
 				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
 				<!--</div>-->
 
-				<h2>FINAL RESULT</h2>
+				<h2>NETWORK OVERLAY</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>why we did it still</p>
+				<p>development iterations</p>
 
 				<!--<div class="gallery">-->
 				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
 				<!--</div>-->
+
+
 
 				<h2>CONCLUSIONS</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>afterthoughts</p>
+                <p>final screenshot</p>
+				<p>quotes from emails</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<div class="gallery">
+				<a class="fancybox" rel="group" title="The released version" href="img/network_overlay/10.released_version.png"><img class="gallery1" id="function_candidates_1" src="img/network_overlay/10.released_version.png" alt="" /></a>
+				</div>
 
 				<div id="disqus_thread"></div>
 				<script>
