sketches added for multi overlay and parking admin

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -155,9 +155,10 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<div class="gallery">
+				<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard_sketch_1.png"><img class="gallery2" id="function_candidates_1" src="img/parkingplus/admin_dashboard_sketch_1.png" alt="" /></a>
+				<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/admin_dashboard_sketch_2.png"><img class="gallery2" id="function_candidates_1" src="img/parkingplus/admin_dashboard_sketch_2.png" alt="" /></a>
+				</div>
 
 				<h2>MARKETING MATERIALS</h2>
 
