multi overlay some image editing

--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -133,7 +133,7 @@
 
 
 				<div class="gallery">
-				<a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/2.ideation_collage.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/2.ideation_collage.png" alt="" /></a>
+				<a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/2.ideation_collage.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/2.ideation_collage_4_no_margins.png" alt="" /></a>
 				</div>
 
                 <p>ideation integration test bla bla bla bla sjdhfkjhs ksjdhf skdf jkhskjdfh jhf kdsajfhksdjf  kjshdfk sdkfj askhdf s</p>
