gallery updates - draft

--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -125,8 +125,8 @@
                 <p>hand drawn mockups</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/A4%204x8%20grid%201.png"><img class="gallery2" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%201.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/A4%204x8%20grid%202.png"><img class="gallery2" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%202.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/A4%204x8%20grid%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/A4%204x8%20grid%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%202.png" alt="" /></a>
 				</div>
 
                 <p>overlay ideation</p>
