multicolor overlay - more content added

--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -147,12 +147,21 @@
 
                 <p>exports</p>
 
+                <div class="gallery">
+                    <a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/7.export_1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/network_overlay/7.export_1.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/7.export_2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/network_overlay/7.export_2.png" alt="" /></a>
+                </div>
+
 				<h2>MOVING AWAY FROM THE NETWORK</h2>
 
 				<p>help online and multiple talks we decided to move away from the overlay</p>
 				<p>mockups with side panels and tables</p>
 				<p>filters need </p>
 				<p>filters mockups </p>
+
+                <div class="gallery">
+                    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/8.table_sparkline_variations.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/8.table_sparkline_variations.png" alt="" /></a>
+                </div>
 
 				<!--<div class="gallery">-->
 				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
