multi overlay more images and quotes

--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -156,11 +156,23 @@
 
 				<p>help online and multiple talks we decided to move away from the overlay</p>
 				<p>mockups with side panels and tables</p>
-				<p>filters need </p>
+
 				<p>filters mockups </p>
 
                 <div class="gallery">
                     <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/8.table_sparkline_variations.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/8.table_sparkline_variations.png" alt="" /></a>
+                </div>
+
+				<p>filters need </p>
+
+				<div class="gallery">
+                    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/10.molecules_table_filters.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/10.molecules_table_filters.png" alt="" /></a>
+                </div>
+
+				<p>lore ipsum</p>
+
+				<div class="gallery">
+                    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/9.dataset_picker.png"><img class="gallery1center" id="network_overlay_2" src="img/network_overlay/9.dataset_picker.png" alt="" /></a>
                 </div>
 
 				<!--<div class="gallery">-->
@@ -170,6 +182,12 @@
 				<h2>NETWORK OVERLAY</h2>
 
 				<p>why we did it still</p>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/11.chart.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/11.chart.png" alt="" /></a>
+				</div>
+
+
 				<p>development iterations</p>
 
 				<!--<div class="gallery">-->
@@ -180,13 +198,19 @@
 
 				<h2>CONCLUSIONS</h2>
 
+				<p>user testing</p>
 				<p>afterthoughts</p>
                 <p>final screenshot</p>
-				<p>quotes from emails</p>
 
 				<div class="gallery">
 				<a class="fancybox" rel="group" title="The released version" href="img/network_overlay/10.released_version.png"><img class="gallery1" id="function_candidates_1" src="img/network_overlay/10.released_version.png" alt="" /></a>
 				</div>
+
+				<p>quotes from emails</p>
+
+				<p class="pullquote-wide">"The new multi-overlay that went into production this week helped the Sales team close a sale! That’s immediate impact. Nice job team!"</p>
+				<p class="pullquote-wide">"Qian and I received the PO right after her demo. Qian was great and the new features rock!!                "</p>
+				<p class="pullquote-wide">"I demo-ed multiple overlay feature by opening TCA cycle of dbMouse metabolomics analysis and overlaying adipose/liver/muscle expression dataset together. They were very impressed by this new multi-overlay feature.Thank you for all the effort in developing the cool features!"</p>
 
 				<div id="disqus_thread"></div>
 				<script>
